<resources>
    <string name="app_name">TodoList</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_new_todo">New Todo</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="start">Start</string>
    <string name="features_not_yet_available">Features not yet available</string>
    <string name="calendar">Calendar</string>
    <string name="new_todo">New Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="menu_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="notification">Notification</string>
    <string name="time">Time</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>

</resources>