<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/round_calendar_month_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_new_todo"
            android:icon="@drawable/round_note_add_24"
            android:title="@string/menu_new_todo" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/round_help_outline_24"
            android:title="@string/menu_about" />
    </group>
</menu>